--- a/1-9.html
+++ b/1-9.html
@@ -8,6 +8,31 @@
     <title>Document</title>
 </head>
 <body>
-    
+	<main class="clearfix">
+		<div class="box">
+			<div class="box-img1"></div>
+			<span class="step">step1</span>
+			<h3 class="title">タイトルが入ります</h3>
+			<p class="text">文章が入ります。文章が入ります。文章が入ります。
+				文章が入ります。文章が入ります。文章が入ります。文章が入ります。
+				文章が入ります。文章が入ります。</p>
+		</div>
+		<div class="box">
+			<div class="box-img2"></div>
+			<span class="step">step2</span>
+			<h3 class="title">タイトルが入ります</h3>
+			<p class="text">文章が入ります。文章が入ります。文章が入ります。
+				文章が入ります。文章が入ります。文章が入ります。文章が入ります。
+				文章が入ります。文章が入ります。</p>
+		</div>
+		<div class="box">
+			<div class="box-img3"></div>
+			<span class="step">step3</span>
+			<h3 class="title">タイトルが入ります</h3>
+			<p class="text">文章が入ります。文章が入ります。文章が入ります。
+				文章が入ります。文章が入ります。文章が入ります。文章が入ります。
+				文章が入ります。文章が入ります。</p>
+		</div>
+	</main>
 </body>
 </html>
